--- a/templates/hibernate.cfg.xml.j2
+++ b/templates/hibernate.cfg.xml.j2
@@ -148,7 +148,7 @@
            - if you want the main wiki database to be different than "xwiki" (or "public" in schema mode)
              you will also have to set the property xwiki.db in xwiki.cfg file
     -->
-    <property name="connection.url">jdbc:postgresql://localhost:5432/{{ xwiki_database }}</property>
+    <property name="connection.url">jdbc:postgresql:{{ xwiki_database }}</property>
     <property name="connection.username">{{ xwiki_database_user }}</property>
     <property name="connection.password">{{ xwiki_database_user_pass }}</property>
     <property name="connection.driver_class">org.postgresql.Driver</property>
