Default variables to setup xwiki to store attachments on the filesystem

--- a/templates/xwiki.cfg.j2
+++ b/templates/xwiki.cfg.j2
@@ -91,15 +91,15 @@ xwiki.tags=1
 #-# The main (documents) storage. [Since 3.4M1] default is hibernate.
 # xwiki.store.main.hint=hibernate
 #-# The attachment storage. [Since 3.4M1] default is hibernate.
-# xwiki.store.attachment.hint=hibernate
+xwiki.store.attachment.hint={{xwiki_store_attachment_hint}}
 #-# The document versioning storage. [Since 3.4M1] default is hibernate.
 # xwiki.store.versioning.hint=hibernate
 #-# The attachment versioning storage. Use 'void' to disable attachment versioning. [Since 3.4M1] default is hibernate.
-# xwiki.store.attachment.versioning.hint=hibernate
+xwiki.store.attachment.versioning.hint={{xwiki_store_attachment_versioning_hint}}
 #-# The document recycle bin storage. [Since 3.4M1] default is hibernate.
 # xwiki.store.recyclebin.hint=hibernate
 #-# The attachment recycle bin storage. [Since 3.4M1] default is hibernate.
-# xwiki.store.attachment.recyclebin.hint=hibernate
+xwiki.store.attachment.recyclebin.hint={{xwiki_store_attachment_recyclebin_hint}}
 #-# [Since 3.4M1] The Migration manager.
 # xwiki.store.migration.manager.hint=hibernate
 
