--- a/templates/xwiki.properties.j2
+++ b/templates/xwiki.properties.j2
@@ -84,7 +84,8 @@
 #-# If neither the system property nor this configuration value here are set then the Servlet container's temporary
 #-# directory is used; This is absolutely not recommended since that directory could be wiped out at any time and you
 #-# should specify a value.
-# environment.permanentDirectory=/var/local/xwiki/
+environment.permanentDirectory={{xwiki_environment_permanent_directory}}
+
 
 #-------------------------------------------------------------------------------------
 # Rendering
