Set XWiki webpath to nothing.

--- a/templates/xwiki.cfg.j2
+++ b/templates/xwiki.cfg.j2
@@ -234,7 +234,7 @@ xwiki.store.migration=1
 #-# instance.
 #-# For example:
 #-# xwiki.webapppath=xwiki
-# xwiki.webapppath=
+xwiki.webapppath=
 #-# The default servlet mapping name to use in the generated URLs. The right value is taken from the request URL,
 #-# preserving the requested servlet mapping, so setting this is not recommended in most cases. If set, the value should
 #-# contain a trailing /, but not a leading one. For example:
