Make the playbook more idempotent.
Do not regenerate cookie keys at every play.

--- a/templates/xwiki.cfg.j2
+++ b/templates/xwiki.cfg.j2
@@ -292,8 +292,8 @@ xwiki.inactiveuser.allowedpages=
 
 #-# Cookie encryption keys. You SHOULD replace these values with any random string,
 #-# as long as the length is the same.
-xwiki.authentication.validationKey={{ validationKey.stdout }}
-xwiki.authentication.encryptionKey={{ encryptionKey.stdout }}
+xwiki.authentication.validationKey={{ xwiki_validation_key }}
+xwiki.authentication.encryptionKey={{ xwiki_encryption_key }}
 xwiki.authentication.useip=true
 
 #-# Comma separated list of domains for which authentication cookies are set. This
