Use administrator_email variable to configure riemann email alerts

--- a/templates/riemann/setup.clj.j2
+++ b/templates/riemann/setup.clj.j2
@@ -15,7 +15,7 @@
 (def tell-ops
   (throttle 1000 3600
             (rollup 3 3600
-                    (email "andrea.russo@cmcc.it")))  )
+                    (email "{{ administrator_email }}"))))
 
 (def default-ttl 30)
 
