Do not use user ip address to calculate cookie unique id.

--- a/templates/xwiki.cfg.j2
+++ b/templates/xwiki.cfg.j2
@@ -294,7 +294,7 @@ xwiki.inactiveuser.allowedpages=
 #-# as long as the length is the same.
 xwiki.authentication.validationKey={{ xwiki_validation_key }}
 xwiki.authentication.encryptionKey={{ xwiki_encryption_key }}
-xwiki.authentication.useip=true
+xwiki.authentication.useip=false
 
 #-# Comma separated list of domains for which authentication cookies are set. This
 #-# concerns mostly wiki farms. The exact meaning is that when a user logs in, if
