--- a/templates/tomcat_xwiki_service_systemd.j2
+++ b/templates/tomcat_xwiki_service_systemd.j2
@@ -39,6 +39,7 @@ ExecStart={{ ansible_local.java.general.java_home }}/bin/java \
 {% else %}
   -Djava.io.tmpdir={{ item.path|default(tomcat_default_instance_path) }}/catalina/{{ item.name }}/temp \
 {% endif %}
+  {{ xwiki_catalina_opts }} \
   -classpath "{{ tomcat_env_catalina_home }}/bin/bootstrap.jar:{{ tomcat_env_catalina_home }}/bin/tomcat-juli.jar" \
   org.apache.catalina.startup.Bootstrap start
 
