Changed collectd log files for Centos 7

--- a/templates/collectd/tail.conf.j2
+++ b/templates/collectd/tail.conf.j2
@@ -9,7 +9,7 @@ LoadPlugin tail
 
 <Plugin tail>
     # Failed SSH logins
-    <File "/var/log/auth.log">
+    <File "/var/log/secure">
         Instance "auth"
         <Match>
             Regex "\\<sshd[^:]*: Invalid user [^ ]+ from\\>"
