--- a/templates/xwiki.cfg.j2
+++ b/templates/xwiki.cfg.j2
@@ -622,7 +622,9 @@ xwiki.plugins=\
   com.xpn.xwiki.plugin.activitystream.plugin.ActivityStreamPlugin, \
   com.xpn.xwiki.plugin.tag.TagPlugin, \
   com.xpn.xwiki.plugin.applicationmanager.ApplicationManagerPlugin,\
-  com.xpn.xwiki.plugin.watchlist.WatchListPlugin
+  com.xpn.xwiki.plugin.watchlist.WatchListPlugin{% if xwiki_plugin_excel %},\
+  com.xpn.xwiki.plugin.excel.ExcelPlugin
+  {% endif %}
 
 #-# Enable light monitoring of the wiki performance. Records various statistics, like number of requests processed,
 #-# time spent in rendering or in the database, medium time for a request, etc. Disable for a minor increase of
