Add local maven repo (synced with host) when in debug mode

--- a/templates/xwiki.properties.j2
+++ b/templates/xwiki.properties.j2
@@ -408,6 +408,11 @@ openoffice.autoStart=true
 #-# When not set the following is taken:
 # extension.repositories=maven-xwiki:maven:http://nexus.xwiki.org/nexus/content/groups/public
 # extension.repositories=extensions.xwiki.org:xwiki:http://extensions.xwiki.org/xwiki/rest/
+{% if xwiki_debug %}
+extension.repositories=local:maven:file:///maven-repo
+extension.repositories=maven-xwiki:maven:http://nexus.xwiki.org/nexus/content/groups/public
+extension.repositories=extensions.xwiki.org:xwiki:http://extensions.xwiki.org/xwiki/rest/
+{% endif %}
 #-# 
 #-# To not have any repository enabled (including disabling default repositories) you can explicitly make this list empty:
 # extension.repositories=
