Added the displaytool velocity var in XWiki scripts

--- a/templates/xwiki.properties.j2
+++ b/templates/xwiki.properties.j2
@@ -289,6 +289,7 @@ openoffice.autoStart=true
 #-#   velocity.tools = urltool = org.xwiki.velocity.tools.URLTool
 #-#   velocity.tools = cookietool = org.apache.velocity.tools.view.CookieTool
 #-#   velocity.tools = exceptiontool = org.apache.commons.lang3.exception.ExceptionUtils
+velocity.tools = displaytool = org.apache.velocity.tools.generic.DisplayTool
 
 #-# [Since 2.0M1]
 #-# Velocity configuration properties. The format is
